# my_chat

./: CREATE DATABASE my_chat;.pgsql  alembic.ini  config.py  docker-compose.yml  hash_pass.py  main.py  pyproject.toml  query.pgsql  readme.md
alembic/: env.py
alembic/versions/: 2024_10_20_1534-2c7c66599128_major_migrate.py  2024_10_21_0115-2340e017936e_remove_name_from_chats.py
app/: __init__.py
app/api/: __init__.py  auth.py  chats.py  enter.py  html_files.py  users.py
app/dao/: chats.py  message.py  users.py
app/jwt/: jwt.py
app/models/: __init__.py  chat.py  message.py  user.py
app/schemas/: chat.py  messages.py  users.py
app/sockets/: socket.py
app/templates/: chat.html  create_chat.html  home.html  login.html
app/utils/: check_users.py
